tests/fixtures/invalid/round_bytes_str.py
# Cannot call round() with Bytes, Str
x = round(b"hello", "hello")
